--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    /*background-color: #85929E !important;*/
+    background: rgba(59,77,86,.8) !important;
+}
